--- a/Monthly Highlights.html
+++ b/Monthly Highlights.html
@@ -24,9 +24,9 @@
   </header>
   <nav class="horizontal-nav"> 
     <a class="active-menu-item" hrf="#">Home</a>
-    <a href="page-2.html">Currently Reading</a>
+    <a href="Currently Reading.html">Currently Reading</a>
     <a href="page-3.html">Our Reviews</a>
-    <a href="page-4.html">Monthly Highlights</a>
+    <a href="Monthly Highlights.html">Monthly Highlights</a>
     <a href="page-5.html">Discussions</a>
     <a href="page-6.html">About</a>
   </nav>
