--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
   <nav class="horizontal-nav"> 
     <a class="active-menu-item" hrf="#">Home</a>
-    <a href="page-2.html">Currently Reading</a>
+    <a href="Currently Reading.html">Currently Reading</a>
     <a href="page-3.html">Our Reviews</a>
     <a href="Monthly Highlights.html">Monthly Highlights</a>
     <a href="page-5.html">Discussions</a>
