--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/stylesheets/homepage.css" />
   <title> Bookworm-Test </title>
 
@@ -19,16 +20,27 @@
 
 <body>
   <header>
+     <!-- dropdown-menu -->
+     <div class="dropdown">
+      <img class="dropbtn" src="./assets/images/Asset 1@2x.png">
+      <div class="dropdown-content">
+      <a href="Currently Reading.html">Currently Reading</a>
+      <a href="Monthly Highlights.html">Monthly Highlights</a>
+      <a href="#">Discussions</a>
+      </div>
+    </div>
     <h1>Bookworm</h1>
     <a class="logo" href="index.html"></a>
   </header>
-  <nav class="horizontal-nav"> 
-    <a class="active-menu-item" hrf="#">Home</a>
-    <a href="Currently Reading.html">Currently Reading</a>
-    <a href="page-3.html">Our Reviews</a>
-    <a href="Monthly Highlights.html">Monthly Highlights</a>
-    <a href="page-5.html">Discussions</a>
-    <a href="page-6.html">About</a>
+  <nav>
+    <div class="horizontal-nav"> 
+      <a class="active-menu-item" hrf="#">Home</a>
+      <a href="Currently Reading.html">Currently Reading</a>
+      <a href="page-3.html">Our Reviews</a>
+      <a href="Monthly Highlights.html">Monthly Highlights</a>
+      <a href="page-5.html">Discussions</a>
+      <a href="page-6.html">About</a>
+    </div>
   </nav>
   <section class="main-container">
     <img class="hero-image" src="./assets/images/heroimage.png" />
