--- a/Monthly Highlights.html
+++ b/Monthly Highlights.html
@@ -19,16 +19,20 @@
 
 <body>
   <header>
-    <h1>Bookworm</h1>
+    <h1>
+      <a href="index.html" style="color: black; text-decoration: none;">
+        Bookworm
+      </a>
+    </h1>
     <a class="logo" href="index.html"></a>
   </header>
   <nav class="horizontal-nav"> 
-    <a class="active-menu-item" hrf="#">Home</a>
+    <a href="index.html">Home</a>
     <a href="Currently Reading.html">Currently Reading</a>
-    <a href="page-3.html">Our Reviews</a>
+    <!-- <a href="page-3.html">Our Reviews</a> -->
     <a href="Monthly Highlights.html">Monthly Highlights</a>
     <a href="page-5.html">Discussions</a>
-    <a href="page-6.html">About</a>
+    <!-- <a href="page-6.html">About</a> -->
   </nav>
   <section class="main-container">
     <body>
@@ -97,19 +101,21 @@
       </article>
       <section class="author-highlight" >
         <!-- TODO: add sidebar content here -->
-        <h3>Author Highlight</h3>
+        <h3 style="font-size:25px;">Author Highlight</h3>
+        <p class="p2" style=font-size:20px;padding-top:5px;padding-bottom:5px; >Rebecca Yarros</p>
         <p>
-          Rebecca Yarros
+          Rebecca Yarros is an American author. She is best known for The Empyrean fantasy 
+          book series, which will be adapted into a television series with Amazon; Yarros 
+          will serve as a non-writing executive producer.
           <br>
           <br>
-          At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in 
-          culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id
-          quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et 
-          molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat
-          cupiditate non provident, similique sunt in 
-          culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id
-          quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et 
-          molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat
+          The first book in The Empyrean series, Fourth Wing, was published in May 2023 by Red Tower Books. In May, it landed fourth on the Libro.fm bestseller list. By late June, it was a number one bestseller on Amazon. As of September 2023, the book had spent 18 weeks on The New York Times Best Seller list, including in the top position. It also landed on the Libro.fm bestseller list in the second spot in August and third spot in September. Additionally, it was a top-ten book club pick for September. In October and November 2023, Fourth Wing was on USA Today's list of the top ten bestselling books.
+          <br>
+          <br>
+          The sequel, Iron Flame, is set to be released in November 2023. In July 2023, Waterstones indicated that it became the "fastest selling pre-order title in a single day on [the] website with [the] special edition selling out in just seven hours". Yarros has indicated that the series will ultimately include five books.
+          <br>
+          <br>
+          In October 2023, it was announced that Michael B. Jordan's Outlier Society and Amazon MGM Studios purchased the rights to adapt the novel series into a television series. Yarros and Entangled Publishing's Liz Pelletier will serve as non-writing executive producers
         </p>
       </section>
       <!-- type html/css code here to link to lightbox javascript -->
