--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     <div class="horizontal-nav"> 
       <a class="active-menu-item" hrf="#">Home</a>
       <a href="Currently Reading.html">Currently Reading</a>
-      <a href="page-3.html">Our Reviews</a>
+      <!-- <a href="page-3.html">Our Reviews</a> -->
       <a href="Monthly Highlights.html">Monthly Highlights</a>
       <a href="page-5.html">Discussions</a>
-      <a href="page-6.html">About</a>
+      <!-- <a href="page-6.html">About</a> -->
     </div>
   </nav>
   <section class="main-container">
