--- a/Monthly Highlights.html
+++ b/Monthly Highlights.html
@@ -19,6 +19,16 @@
 
 <body>
   <header>
+    <!-- dropdown-menu -->
+    <div class="dropdown">
+      <img class="dropbtn" src="./assets/images/Asset 1@2x.png">
+      <div class="dropdown-content">
+      <a href="index.html">Home</a>
+      <a href="Currently Reading.html">Currently Reading</a>
+      <a href="Monthly Highlights.html">Monthly Highlights</a>
+      <a href="#">Discussions</a>
+      </div>
+      </div>
     <h1>
       <a href="index.html" style="color: black; text-decoration: none;">
         Bookworm
@@ -36,91 +46,72 @@
   </nav>
   <section class="main-container">
     <body>
-      <article class="book-highlights">
-        <div class="grid-container">
-          <h2>Monthly Highlights</h2>
-          <div class="row">
-            <div class="column">
-              <a class="grid-item" href="./assets/images/lightbox/EINE.jpeg" data-lightbox="EINE" data-title="Everything is Not Enough">
-                <img class="grid-image" src="./assets/images/lightbox/EINE.jpeg" alt="Everything is Not Enough" />
-              </a>
-              <a class="grid-item" href="./assets/images/lightbox/DV.jpeg" data-lightbox="DV" data-title="Death Valley">
-                <img class="grid-image" src="./assets/images/lightbox/DV.jpeg" alt="Death Valley" />
-              </a>
-            </div>
-            <div class="column">
-              <a class="grid-item" href="./assets/images/lightbox/FM.jpeg" data-lightbox="FM" data-title="Family Meal">
-                <img class="grid-image" src="./assets/images/lightbox/FM.jpeg" alt="Family Meal"/>
-              </a>
-              <a class="grid-item" href="./assets/images/lightbox/FW.jpeg" data-lightbox="FW" data-title="Fourth Wing">
-                <img class="grid-image" src="./assets/images/lightbox/FW.jpeg" alt="Fourth Wing" />
-              </a>
-            </div>
-            <div class="column">
-              <a class="grid-item" href="./assets/images/lightbox/OM.jpeg" data-lightbox="OM" data-title="Organ Meats">
-                <img class="grid-image" src="./assets/images/lightbox/OM.jpeg" alt="Organ Meats" />
-              </a>
-              <a class="grid-item" href="./assets/images/lightbox/GFAG.jpeg" data-lightbox="GFAG" data-title="Good For A Girl">
-                <img class="grid-image" src="./assets/images/lightbox/GFAG.jpeg" alt="Good For A Girl" />
-              </a>
-            </div>
-            <div class="column">
-              <a class="grid-item" href="./assets/images/lightbox/SH.jpeg" data-lightbox="SH" data-title="Starling House">
-                <img class="grid-image" src="./assets/images/lightbox/SH.jpeg" alt="Starling House" />
-              </a>
-              <a class="grid-item" href="./assets/images/lightbox/WTRK.jpeg" data-lightbox="WTRK" data-title="What The River Knows">
-                <img class="grid-image" src="./assets/images/lightbox/WTRK.jpeg" alt="What The River Knows" />
-              </a>
+      <div class="page-title">
+        <h2>Monthly Highlights</h2>
+      </div>
+      <div class="highlights">
+        <article class="book-highlights">
+          <div class="grid-container">
+            <div class="row">
+              <div class="column">
+                <a class="grid-item" href="./assets/images/lightbox/EINE.jpeg" data-lightbox="EINE" data-title="Everything is Not Enough">
+                  <img class="grid-image" src="./assets/images/lightbox/EINE.jpeg" alt="Everything is Not Enough" />
+                </a>
+                <a class="grid-item" href="./assets/images/lightbox/DV.jpeg" data-lightbox="DV" data-title="Death Valley">
+                  <img class="grid-image" src="./assets/images/lightbox/DV.jpeg" alt="Death Valley" />
+                </a>
+              </div>
+              <div class="column">
+                <a class="grid-item" href="./assets/images/lightbox/FM.jpeg" data-lightbox="FM" data-title="Family Meal">
+                  <img class="grid-image" src="./assets/images/lightbox/FM.jpeg" alt="Family Meal"/>
+                </a>
+                <a class="grid-item" href="./assets/images/lightbox/FW.jpeg" data-lightbox="FW" data-title="Fourth Wing">
+                  <img class="grid-image" src="./assets/images/lightbox/FW.jpeg" alt="Fourth Wing" />
+                </a>
+              </div>
+              <div class="column">
+                <a class="grid-item" href="./assets/images/lightbox/OM.jpeg" data-lightbox="OM" data-title="Organ Meats">
+                  <img class="grid-image" src="./assets/images/lightbox/OM.jpeg" alt="Organ Meats" />
+                </a>
+                <a class="grid-item" href="./assets/images/lightbox/GFAG.jpeg" data-lightbox="GFAG" data-title="Good For A Girl">
+                  <img class="grid-image" src="./assets/images/lightbox/GFAG.jpeg" alt="Good For A Girl" />
+                </a>
+              </div>
+              <div class="column">
+                <a class="grid-item" href="./assets/images/lightbox/SH.jpeg" data-lightbox="SH" data-title="Starling House">
+                  <img class="grid-image" src="./assets/images/lightbox/SH.jpeg" alt="Starling House" />
+                </a>
+                <a class="grid-item" href="./assets/images/lightbox/WTRK.jpeg" data-lightbox="WTRK" data-title="What The River Knows">
+                  <img class="grid-image" src="./assets/images/lightbox/WTRK.jpeg" alt="What The River Knows" />
+                </a>
+              </div>
             </div>
           </div>
-          <!-- <a href="./assets/images/lightbox/WTRK.jpeg" data-lightbox="WTRK" data-title="What The River Knows">
-            <img src="./assets/images/lightbox/WTRK.jpeg" alt="What The River Knows" style="width: 170px;" />
-          </a>
-          <a href="./assets/images/lightbox/FW.jpeg" data-lightbox="FW" data-title="Fourth Wing">
-            <img src="./assets/images/lightbox/FW.jpeg" alt="Fourth Wing" style="width: 170px;" />
-          </a>
-          <a href="./assets/images/lightbox/GFAG.jpeg" data-lightbox="GFAG" data-title="Good For A Girl">
-            <img src="./assets/images/lightbox/GFAG.jpeg" alt="Good For A Girl" style="width: 170px;" />
-          </a>
-          <a href="./assets/images/lightbox/DV.jpeg" data-lightbox="DV" data-title="Death Valley">
-            <img src="./assets/images/lightbox/DV.jpeg" alt="Death Valley" style="width: 170px;" />
-          </a>
-          <a href="./assets/images/lightbox/EINE.jpeg" data-lightbox="EINE" data-title="Everything is Not Enough">
-            <img src="./assets/images/lightbox/EINE.jpeg" alt="Everything is Not Enough" style="width: 170px;" />
-          </a>
-          <a href="./assets/images/lightbox/FM.jpeg" data-lightbox="FM" data-title="Family Meal">
-            <img src="./assets/images/lightbox/FM.jpeg" alt="Family Meal" style="width: 170px;" />
-          </a>
-          <a href="./assets/images/lightbox/OM.jpeg" data-lightbox="OM" data-title="Organ Meats">
-            <img src="./assets/images/lightbox/OM.jpeg" alt="Organ Meats" style="width: 170px;" />
-          </a>
-          <a href="./assets/images/lightbox/SH.jpeg" data-lightbox="SH" data-title="Starling House">
-            <img src="./assets/images/lightbox/SH.jpeg" alt="Starling House" style="width: 170px;" />
-          </a> -->
-        </div>
-      </article>
-      <section class="author-highlight" >
-        <!-- TODO: add sidebar content here -->
-        <h3 style="font-size:25px;">Author Highlight</h3>
-        <p class="p2" style=font-size:20px;padding-top:5px;padding-bottom:5px; >Rebecca Yarros</p>
-        <p>
-          Rebecca Yarros is an American author. She is best known for The Empyrean fantasy 
-          book series, which will be adapted into a television series with Amazon; Yarros 
-          will serve as a non-writing executive producer.
-          <br>
-          <br>
-          The first book in The Empyrean series, Fourth Wing, was published in May 2023 by Red Tower Books. In May, it landed fourth on the Libro.fm bestseller list. By late June, it was a number one bestseller on Amazon. As of September 2023, the book had spent 18 weeks on The New York Times Best Seller list, including in the top position. It also landed on the Libro.fm bestseller list in the second spot in August and third spot in September. Additionally, it was a top-ten book club pick for September. In October and November 2023, Fourth Wing was on USA Today's list of the top ten bestselling books.
-          <br>
-          <br>
-          The sequel, Iron Flame, is set to be released in November 2023. In July 2023, Waterstones indicated that it became the "fastest selling pre-order title in a single day on [the] website with [the] special edition selling out in just seven hours". Yarros has indicated that the series will ultimately include five books.
-          <br>
-          <br>
-          In October 2023, it was announced that Michael B. Jordan's Outlier Society and Amazon MGM Studios purchased the rights to adapt the novel series into a television series. Yarros and Entangled Publishing's Liz Pelletier will serve as non-writing executive producers
-        </p>
-      </section>
-      <!-- type html/css code here to link to lightbox javascript -->
-      <script type="text/JavaScript" src="./assets/javascripts/lightbox-plus-jquery.min.js"></script>
-    </body>
+        </article>
+        <section class="author-highlight" >
+          <!-- TODO: add sidebar content here -->
+          <h3 style="font-size:25px;">Author Highlight</h3>
+          <p class="p2" style=font-size:20px;padding-top:5px;padding-bottom:5px; >Rebecca Yarros</p>
+          <p>
+            Rebecca Yarros is an American author. She is best known for The Empyrean fantasy 
+            book series, which will be adapted into a television series with Amazon; Yarros 
+            will serve as a non-writing executive producer.
+            <br>
+            <br>
+            The first book in The Empyrean series, Fourth Wing, was published in May 2023 by Red Tower Books. In May, it landed fourth on the Libro.fm bestseller list. By late June, it was a number one bestseller on Amazon. As of September 2023, the book had spent 18 weeks on The New York Times Best Seller list, including in the top position. It also landed on the Libro.fm bestseller list in the second spot in August and third spot in September. Additionally, it was a top-ten book club pick for September. In October and November 2023, Fourth Wing was on USA Today's list of the top ten bestselling books.
+            <br>
+            <br>
+            The sequel, Iron Flame, is set to be released in November 2023. In July 2023, Waterstones indicated that it became the "fastest selling pre-order title in a single day on [the] website with [the] special edition selling out in just seven hours". Yarros has indicated that the series will ultimately include five books.
+            <br>
+            <br>
+            In October 2023, it was announced that Michael B. Jordan's Outlier Society and Amazon MGM Studios purchased the rights to adapt the novel series into a television series. Yarros and Entangled Publishing's Liz Pelletier will serve as non-writing executive producers
+          </p>
+        </section>
+        <!-- type html/css code here to link to lightbox javascript -->
+        <script type="text/JavaScript" src="./assets/javascripts/lightbox-plus-jquery.min.js"></script>
+      </body>
+      </div>
+      
   </section>
   
 
