--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
   </nav>
   <section class="main-container">
-    <img class="hero-image" src="./assets/images/heroimage.png" />
+    <img class="hero-image" src="./assets/images/chair.jpg" />
   </section>
   <footer class="footer-content">
     <div class="footer-link-container">
