--- a/Currently Reading.html
+++ b/Currently Reading.html
@@ -26,7 +26,7 @@
       <a href="index.html">Home</a>
       <a href="Currently Reading.html">Currently Reading</a>
       <a href="Monthly Highlights.html">Monthly Highlights</a>
-      <a href="#">Discussions</a>
+      <a href="discussions.html">Discussions</a>
       </div>
     </div>
     <h1>
@@ -41,8 +41,7 @@
     <a href="Currently Reading.html">Currently Reading</a>
     <!-- <a href="page-3.html">Our Reviews</a> -->
     <a href="Monthly Highlights.html">Monthly Highlights</a>
-    <a href="page-5.html">Discussions</a>
-    <a href="page-6.html">About</a>
+    <a href="Discussions.html">Discussions</a>
   </nav>
   <section class="main-container">
     <body>
@@ -54,7 +53,7 @@
             <p>
               <img class="currently-reading-book"
                 src="./assets/images/currently-reading/SO.jpeg" alt="Sharp Objects" />    
-                <p class="p1">Sharp Obejects</p>
+                <p class="p1">Sharp Objects</p>
                 <p class="p2">Gillian Flynn</p>
                 <br>
                 Fresh from a brief stay at a psych hospital, reporter Camille Preaker faces
