--- a/Monthly Highlights.html
+++ b/Monthly Highlights.html
@@ -26,7 +26,7 @@
       <a href="index.html">Home</a>
       <a href="Currently Reading.html">Currently Reading</a>
       <a href="Monthly Highlights.html">Monthly Highlights</a>
-      <a href="#">Discussions</a>
+      <a href="discussions.html">Discussions</a>
       </div>
       </div>
     <h1>
@@ -41,7 +41,7 @@
     <a href="Currently Reading.html">Currently Reading</a>
     <!-- <a href="page-3.html">Our Reviews</a> -->
     <a href="Monthly Highlights.html">Monthly Highlights</a>
-    <a href="page-5.html">Discussions</a>
+    <a href="Discussions.html">Discussions</a>
     <!-- <a href="page-6.html">About</a> -->
   </nav>
   <section class="main-container">
@@ -92,7 +92,7 @@
           <!-- TODO: add sidebar content here -->
           <h3 style="font-size:25px;">Author Highlight</h3>
           <p class="p2" style=font-size:20px;padding-top:5px;padding-bottom:5px; >Rebecca Yarros</p>
-          <p>
+          <p class="scroll">
             Rebecca Yarros is an American author. She is best known for The Empyrean fantasy 
             book series, which will be adapted into a television series with Amazon; Yarros 
             will serve as a non-writing executive producer.
