--- a/discussions.html
+++ b/discussions.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/homepage.css" />
+  <link rel="stylesheet" type="text/css" href="./assets/stylesheets/discussions.css" />
   <title> Bookworm-Test </title>
 
   <style>
@@ -24,9 +24,10 @@
      <div class="dropdown">
       <img class="dropbtn" src="./assets/images/Asset 1@2x.png">
       <div class="dropdown-content">
+      <a href="index.html">Home</a>
       <a href="Currently Reading.html">Currently Reading</a>
       <a href="Monthly Highlights.html">Monthly Highlights</a>
-      <a href="discussions.html">Discussions</a>
+      <a href="Discussions.html">Discussions</a>
       </div>
     </div>
     <h1>Bookworm</h1>
@@ -43,7 +44,32 @@
     </div>
   </nav>
   <section class="main-container">
-    <img class="hero-image" src="./assets/images/chair.jpg" />
+  <body>
+    <div class="page-title">
+      <h2>Discussions</h2>
+    </div>
+    <section>
+      <div class="flex-container">
+        <div class="video-container">
+        <!-- start with 1 video and add more to watch the alignment of flex display -->
+        <!-- type html/css code here -->
+        <div style="width: 840px; word-wrap: break-word;">
+          <h3>Watch trailor for HBO's adaptation of Gillian Flynn's novel Sharp Objects</h3>
+          <iframe width="840" height="472.5" 
+          src="https://www.youtube.com/embed/_v8Fm3O8cp0?si=lfGNoxvA-Gfgwxg1" 
+          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+  
+        <div style="width: 840px; word-wrap: break-word; padding-top: 30px;">
+          <h3>Watch interview with Red Rising author Pierce Brown</h3>
+          <iframe width="840" height="472.5" 
+          src="https://www.youtube.com/embed/-63sN4NU-Wg?si=jAhK44RW8ytf4uy_" title="YouTube video player" f
+          rameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+      </div>
+      </div>
+    </section>
+  </body>
   </section>
   <footer class="footer-content">
     <div class="footer-link-container">
